--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "backbone and marionette",
         "marionette starter kit",
         "marionette template app",
-        "backbone marionette requirejs boilerplate",
+        "backbone marionette requirejs boilerplate"
     ],
     "repository": {
         "type": "git",
